# terminal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  packages.tdm
.github/workflows/: bench.yml  ci.yml  prebuild.yml  release.yml
benches/: baseline.json  renderer_perf.rs
docs/: api.md
examples/: smoke_test.td
native/: addon.lock.toml  addon.toml
scripts/: check-bench-budget.sh  compare-bench-baseline.sh  smoke-test.sh
src/: event.rs  key.rs  lib.rs  raw_mode.rs  size.rs  tty.rs  windows.rs  write.rs
src/renderer/: blit.rs  diff.rs  mod.rs  ops.rs  state.rs
taida/: ansi.td  prompt.td  renderer.td  style.td  terminal.td  widgets.td  width.td
tests/: ansi_facade.rs  event_non_tty.rs  read_key_non_tty.rs  renderer_facade.rs  renderer_smoke.rs  sigwinch_external_chain.rs  sigwinch_install_order.rs  widget_facade.rs  write_arity_mismatch.rs  write_non_tty.rs  write_returns_byte_count.rs
